# agentception

./: .agent-task  .cursorignore  .cursorrules  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HACKATHON.md  LICENSE  README.md  docker-compose.ci.yml  docker-compose.yml  org-presets.yaml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.node.json  vitest.config.ts
.agentception/: README.md  agent-command-policy.md  agent-conductor.md  agent-engineer.md  agent-reviewer.md  agent-task-spec.md  agent-triage.md  cognitive-arch-enrichment-spec.md  conflict-rules.md  dispatcher.md  memory.json  multi-tier-agent-architecture.md  parallel-bugs-to-issues.md  parallel-conductor.md  parallel-issue-to-pr.md  parallel-pr-review.md  pipeline-config.json  pipeline-howto.md  role-versions.json  stress-test-parallelism.md  verification-761.md
.agentception/prompts/: parallel-bugs-to-issues.md  parallel-conductor.md  parallel-issue-to-pr.md  parallel-pr-review.md
.agentception/roles/: android-developer.md  api-developer.md  architect.md  cdo.md  ceo.md  cfo.md  ciso.md  cmo.md  content-writer.md  coo.md  coordinator.md  cpo.md  cto.md  data-coordinator.md  data-engineer.md  data-scientist.md  database-architect.md  design-coordinator.md  developer-streamlined.md  developer.md  devops-engineer.md  engineering-coordinator.md  engineering-manager.md  (+35 more)
.cursor/: mcp.json
agentception/: Dockerfile  EXTRACT.md  README.md  __init__.py  alembic.ini  app.py  config.py  models.py  poller.py  pyproject.toml  reconcile.py  requirements.txt  telemetry.py  types.py
docs/: README.md  agent-tree-protocol.md  architecture.md  cognitive-arch-audit.md  cursor-agent-spawning.md  migration.md  plan-spec.md  toml-v2-audit.md
scripts/: README.md  ablation_benchmark.py  debug_loop.py  dev.sh  dispatch_issue_941.py  entrypoint.sh  gen_cognitive_arch_tasks.py  github-askpass  knowtation_write_phase_summary.sh  retrofit_activity_events.py  search_benchmark.py  smoke_test_agent_loop.py  watch_run.py
tests/: test_ab_metrics.py  test_ab_metrics_panel.py  test_build_commands.py  test_db_migrations.py  test_developer_prompt.py  test_developer_streamlined_prompt.py  test_git_reader.py  test_health_collector.py  test_health_snapshot.py  test_health_widget.py  test_models.py  test_plan_advance_phase.py  test_resolve_arch.py  test_spawn_child.py  test_version_endpoint.py  test_working_memory.py
tools/: cost.py  typing_audit.py
(+634 files in other folders)
