[project]
name = "agentception"
version = "0.1.0"
description = "Multi-agent orchestration system for AI-powered development workflows"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
